# compM080-compGV18-2019

./: .gitmodules  LICENSE  README.md
course_work_1/: README.md
course_work_1/output/: loss_que2_10.csv  loss_que2_15.csv  loss_que2_30.csv  loss_que2_5.csv  loss_que3.csv  loss_que3_10.csv  loss_que4_10.csv  loss_que4_100.csv  loss_que4_30.csv  loss_que4_50.csv  loss_que4_70.csv  loss_que5.csv  loss_que6.csv  loss_que6_0_45_nonormal.csv  loss_que6_nonormal.csv  loss_que6_normal.csv
course_work_1/src/: CMakeLists.txt  main.cpp  mytools.cpp  mytools.h
course_work_1/src/cmake/: FindLIBIGL.cmake
course_work_2/: README.md
course_work_2/src/: CMakeLists.txt  main.cpp  mytools.cpp  mytools.h
course_work_3/src/: CMakeLists.txt  main.cpp  mytools.cpp  mytools.h  seamster.cpp  seamster.h
tutorial_001/cpp/: README.md
tutorial_001/cpp/pratices_002/src/: CMakeLists.txt  main.cpp  mytools.cpp  mytools.h  sensorData.h
tutorial_001/data/pose/: 10.txt  100.txt  101.txt  102.txt  103.txt  105.txt  107.txt  108.txt  11.txt  110.txt  111.txt  112.txt  113.txt  14.txt  16.txt  17.txt  (+38 more)
tutorial_001/python/: 3D acquisition.ipynb
tutorial_002/cpp/: README.md
tutorial_002/python/: 3D acquisition.ipynb
tutorial_003/cpp/: README.md
tutorial_003/data/: example.off  example.ply  example_small.off  example_small.ply
tutorial_003/python/: 3D acquisition.ipynb
tutorial_004/cpp/: README.md
tutorial_005/python/: Mean Curvature.ipynb  camera_read.ipynb  get_parula_map.py  import_OBJ.py  vis_mesh.ply
tutorial_006/cpp/: README.md
tutorial_006/data/: camelhead_cut.off
(+83 files in other folders)
